--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,16 +5,14 @@
   <!-- New Project Button and Form wrapped in Turbo Frame -->
   <%= turbo_frame_tag 'new_project_form' do %>
     <div class="text-center mb-12">
-      <%= link_to 'New Project', new_project_path, class: 'inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out', data: { turbo_frame: 'new_project_form' } %>
+      <%= link_to 'New Project', new_project_path, class: 'inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out', data: { turbo_frame: 'new_project_form', turbo_action: 'replace' } %>
     </div>
   <% end %>
 
-  <!-- Projects List wrapped in Turbo Frame -->
-  <%= turbo_frame_tag 'projects_list' do %>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-      <% Project.all.each do |project| %>
-        <%= render partial: 'projects/project', locals: { project: project } %>
-      <% end %>
-    </div>
-  <% end %>
+  <!-- Projects List -->
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+    <% Project.all.each do |project| %>
+      <%= render partial: 'projects/project', locals: { project: project } %>
+    <% end %>
+  </div>
 </div>
