--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,7 +33,7 @@
       <!-- Inline Status Edit Form (Initially Hidden) -->
       <% if current_user.admin? %>
         <div id="status-edit-form" class="mt-4 hidden opacity-0 max-h-0 overflow-hidden transition-all duration-500 ease-in-out">
-          <%= form_with url: change_status_project_path(current_project), method: :patch, local: true, class: "space-y-4" do |form| %>
+          <%= form_with model: current_project, url: project_path(current_project), method: :patch, data: { turbo_frame: dom_id(current_project) }, class: "space-y-4" do |form| %>
             <div class="flex items-center space-x-4">
               <%= form.select :status, Project.statuses.keys.map { |status| [status.humanize, status] }, {}, class: "w-1/2 bg-white border border-gray-300 rounded-full py-2 px-4 text-gray-700 focus:outline-none focus:ring-0 focus:border-blue-500 shadow-sm transition duration-300" %>
               <%= form.submit "Update Status", class: "bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-5 rounded-full transition duration-200 ease-in-out shadow-md" %>
