--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,8 +1,8 @@
-<!-- app/views/projects/new.html.erb -->
 <%= turbo_frame_tag 'new_project_form' do %>
-  <div class="max-w-3xl mx-auto bg-white shadow-lg rounded-lg p-8 mt-12">
+  <div class="max-w-3xl mx-auto bg-white shadow-lg rounded-lg p-8 mt-12 mb-12"> <!-- Added mb-12 for spacing at the bottom -->
     <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Create New Project</h1>
-  <%= render 'form', project: @project %>
+    <%= render 'form', project: @project %>
+
     <!-- Back to Projects Link -->
     <div class="text-center mt-8">
       <%= link_to 'Back to Projects', projects_path, class: 'text-blue-500 hover:underline text-lg' %>
